# draft-two

./: .gitignore  README.md  env.dist  pyproject.toml  requirements.txt
draft_two/: run_pipeline.py
draft_two/pipeline/: __init__.py  audio_extractor.py  audio_transcriber.py  batch_processor.py  fact_extractor.py  metadata_creator.py
