[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "draft_two"
version = "0.0.1"
authors = [
    { name="David Hackett", email="davidhackett12@gmail.com" },
]
description = "A mock version of draft one to create police reports from body worn camera videos"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["draft_two*"]
